Bug 469817 - No text shown when word wrap is on
Summary: No text shown when word wrap is on
Status: RESOLVED FIXED
Alias: None
Product: kdiff3
Classification: Applications
Component: application (other bugs)
Version First Reported In: 1.10.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: michael
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-05-15 18:44 UTC by Grósz Dániel
Modified: 2023-05-16 00:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.10.3
Sentry Crash Report:


Attachments
Screenshot with word wrap on (51.48 KB, image/png)
2023-05-15 18:44 UTC, Grósz Dániel
Details
Screenshot with the same files, with word wrap off (52.93 KB, image/png)
2023-05-15 18:45 UTC, Grósz Dániel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Grósz Dániel 2023-05-15 18:44:23 UTC
Created attachment 158978 [details]
Screenshot with word wrap on

SUMMARY
When word wrap is turned on, all text in the diff view disappears.

STEPS TO REPRODUCE
1. Open some files in a 2- or 3-way diff.
2. Turn on Diffview/Word Wrap Diff Windows.

OBSERVED RESULT
No text in the diff views; all white (see screenshot).

EXPECTED RESULT
The text is shown, with word wrap.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20230513
KDE Plasma Version: 5.27.5
KDE Frameworks Version: 5.105.0
Qt Version: 5.15.9
Kernel Version: 6.3.1-2-default (64-bit)
Graphics Platform: X11
Graphics Processor: Mesa Intel® UHD Graphics 620
Comment 1 Grósz Dániel 2023-05-15 18:45:04 UTC
Created attachment 158979 [details]
Screenshot with the same files, with word wrap off
Comment 2 Grósz Dániel 2023-05-16 00:21:04 UTC
Maybe related to the recently fixed Bug 468492.
Comment 3 michael 2023-05-16 00:50:28 UTC
Git commit 3f34079611028c0e588a218cf2a5d24e7ea7e5b1 by Michael Reeves.
Committed on 16/05/2023 at 00:41.
Pushed by mreeves into branch 'master'.

Don't block generation of word wrap cache
FIXED-IN:1.10.3

M  +4    -1    src/difftextwindow.cpp

https://invent.kde.org/sdk/kdiff3/commit/3f34079611028c0e588a218cf2a5d24e7ea7e5b1
Comment 4 michael 2023-05-16 00:51:05 UTC
Git commit 00be1bac1b00f8e3ab2ce85608a25a57005c0a9e by Michael Reeves.
Committed on 16/05/2023 at 00:38.
Pushed by mreeves into branch '1.10'.

Don't block generation of word wrap cache
FIXED-IN:1.10.3

M  +4    -0    ChangeLog
M  +4    -1    src/difftextwindow.cpp

https://invent.kde.org/sdk/kdiff3/commit/00be1bac1b00f8e3ab2ce85608a25a57005c0a9e