Don't block generation of word wrap cache

BUG:469817
FIXED-IN:1.10.3